syntax = "proto3";

package transaction;

service TransactionService {
  rpc AddTransaction (AddTransactionRequest) returns (TransactionResponse) {}
  rpc GetTransaction (GetTransactionRequest) returns (TransactionResponse) {}
  rpc UpdateTransaction (UpdateTransactionRequest) returns (TransactionResponse) {}
  rpc DeleteTransaction (DeleteTransactionRequest) returns (DeleteTransactionResponse) {}
}

message Transaction {
  int32 id = 1;
  string timestamp = 2;
  string user_id = 3;
  string crypto_name = 4;
  float amount = 5;
  string transaction_type = 6;
}

message AddTransactionRequest {
  string user_id = 1;
  string crypto_name = 2;
  float amount = 3;
  string transaction_type = 4;
}

message GetTransactionRequest {
  int32 id = 1;
}

message UpdateTransactionRequest {
  int32 id = 1;
  string field = 2;
  string value = 3;
}

message DeleteTransactionRequest {
  int32 id = 1;
}

message TransactionResponse {
  Transaction transaction = 1;
}

message DeleteTransactionResponse {
  bool success = 1;
}
